--- a/admin/website-angular/src/app/@shared/invite/invite-request/invite-request-modal.component.html
+++ b/admin/website-angular/src/app/@shared/invite/invite-request/invite-request-modal.component.html
@@ -24,7 +24,9 @@
 	</div>
 	<div class="modal-footer">
 		<button
-			class="btn btn-md btn-hero-success"
+			nbButton
+			status="success"
+			hero
 			[disabled]="location?.invalid"
 			(click)="create()"
 		>
