--- a/admin/website-angular/src/app/@shared/product/categories/category-create/category-create.component.html
+++ b/admin/website-angular/src/app/@shared/product/categories/category-create/category-create.component.html
@@ -15,7 +15,9 @@
 	<div class="col-sm-9"></div>
 	<div class="col">
 		<button
-			class="btn btn-success"
+			nbButton
+			status="success"
+			size="large"
 			type="button"
 			(click)="createCategory(basicInfo.createObject)"
 			[disabled]="basicInfo.form.invalid"
