--- a/admin/website-angular/src/app/pages/+carriers/+carrier/carrier.component.html
+++ b/admin/website-angular/src/app/pages/+carriers/+carrier/carrier.component.html
@@ -26,10 +26,12 @@
 			<nb-card-body>
 				<button
 					type="button"
-					class="btn btn-primary btn-with-icon no-text-transform"
+					nbButton
+					status="primary"
+					class="btn-with-icon no-text-transform"
 					[routerLink]="['./edit']"
 				>
-					<i class="ion-md-create"></i>
+					<i class="ion-md-create mr-2"></i>
 					<span>{{
 						'CARRIERS_VIEW.CARRIER_PAGE.EDIT' | translate
 					}}</span>
