--- a/admin/website-angular/src/app/pages/+customers/+customer/customer.component.html
+++ b/admin/website-angular/src/app/pages/+customers/+customer/customer.component.html
@@ -31,10 +31,11 @@
 				<div class="col-3 edit-wrapper">
 					<button
 						type="button"
-						class="btn btn-primary active"
+						nbButton
+						status="primary"
 						[routerLink]="['./edit']"
 					>
-						<i class="ion-md-create button-icon"></i>
+						<i class="ion-md-create button-icon mr-2"></i>
 						<small>{{
 							'CUSTOMERS_VIEW.CUSTOMER_VIEW.EDIT' | translate
 						}}</small>
