--- a/admin/website-angular/src/app/@shared/warehouse-product/forms/warehouse-add-choice/warehouse-add-choice.component.scss
+++ b/admin/website-angular/src/app/@shared/warehouse-product/forms/warehouse-add-choice/warehouse-add-choice.component.scss
@@ -32,6 +32,7 @@
 	font-size: 0.95rem;
 
 	button {
+		text-transform: uppercase;
 		margin: 10%;
 		margin-top: 11%;
 		margin: auto !important !important;
