--- a/admin/website-angular/src/app/@theme/styles/styles.scss
+++ b/admin/website-angular/src/app/@theme/styles/styles.scss
@@ -8,9 +8,6 @@
 //angular2-toaster
 @import 'node_modules/angular2-toaster/toaster';
 
-// global app font size
-@import './font-size';
-
 // custom global ng-bootstrap modal
 @import './ng-bootstrap.modal';
 // loading progress bar theme
@@ -243,4 +240,31 @@ h6 {
 
 .ng2-smart-action.ng-star-inserted i {
 	font-size: 1.5rem;
+}
+
+span.space {
+	margin-right: 5px;
+}
+
+div.redirectBtn {
+	border: 2px solid #dadfe6;
+	color: #2a2a2a;
+	background-color: transparent;
+	padding: 0.525rem 0.6rem 0.525rem 0.6rem;
+	border-radius: 0.375rem;
+	position: relative;
+	cursor: pointer;
+
+	strong {
+		font-weight: 500;
+	}
+}
+
+div.redirectBtn:hover {
+	background: #dadfe6;
+}
+
+button,
+.btn {
+	font-weight: 500 !important;
 }
