--- a/admin/website-angular/src/app/pages/+customers/+invites/invites.component.html
+++ b/admin/website-angular/src/app/pages/+customers/+invites/invites.component.html
@@ -8,11 +8,13 @@
 			<nb-card class="no-margin">
 				<nb-card-header>
 					<button
-						class="btn btn-icon btn-danger btn-sm mr-2 d-inline-block"
+						nbButton
+						status="danger"
+						class=" btn-sm mr-2 d-inline-block"
 						[disabled]="!hasSelectedInvites"
 						(click)="deleteSelectedRows()"
 					>
-						<i class="ion-md-trash button-icon"></i>
+						<i class="ion-md-trash button-icon mr-2"></i>
 						<small>{{
 							'CUSTOMERS_VIEW.INVITES_VIEW.DELETE' | translate
 						}}</small>
