--- a/admin/website-angular/src/app/pages/+products/products.component.html
+++ b/admin/website-angular/src/app/pages/+products/products.component.html
@@ -3,20 +3,24 @@
 
 	<nb-card-header>
 		<button
-			class="btn btn-success mr-2 d-inline-block"
+			nbButton
+			status="success"
+			class="mr-2 d-inline-block"
 			(click)="openWizardNewProduct()"
 		>
-			<i class="ion-md-add button-icon"></i>
+			<i class="ion-md-add button-icon mr-2"></i>
 			<small _ngcontent-c55="">{{
 				'PRODUCTS_VIEW.CREATE' | translate
 			}}</small>
 		</button>
 		<button
-			class="btn btn-danger mr-2 d-inline-block"
+			nbButton
+			status="danger"
+			class="mr-2 d-inline-block"
 			[disabled]="!hasSelectedProducts"
 			(click)="deleteSelectedRows()"
 		>
-			<i class="ion-md-trash button-icon"></i>
+			<i class="ion-md-trash button-icon mr-2"></i>
 			<small _ngcontent-c55="">{{
 				'PRODUCTS_VIEW.DELETE' | translate
 			}}</small>
