--- a/admin/website-angular/src/app/pages/+setup/setup.component.html
+++ b/admin/website-angular/src/app/pages/+setup/setup.component.html
@@ -4,11 +4,17 @@
 	</nb-card-header>
 
 	<nb-card-body>
-		<button class="btn btn-primary mr-3" (click)="navigateToFakeDataPage()">
+		<button
+			nbButton
+			status="primary"
+			class="mr-3"
+			(click)="navigateToFakeDataPage()"
+		>
 			{{ 'FAKE_DATA.GENERATE_INITIAL_DATA' | translate }}
 		</button>
 		<button
-			class="btn btn-primary"
+			nbButton
+			status="primary"
 			(click)="navigateToSetupMerchantsPage()"
 		>
 			{{ 'FAKE_DATA.SETUP_MERCHANTS.SETUP_MERCHANTS' | translate }}
