--- a/admin/website-angular/src/app/pages/+warehouses/+warehouse/warehouse.component.html
+++ b/admin/website-angular/src/app/pages/+warehouses/+warehouse/warehouse.component.html
@@ -19,12 +19,15 @@
 							<div class="row">
 								<div class="col-md-12">
 									<button
-										class="btn btn-icon btn-sm btn-success"
+										nbButton
+										status="success"
 										(click)="
 											openWarehouseOrderCreateModal()
 										"
 									>
-										<i class="ion-md-add button-icon"></i>
+										<i
+											class="ion-md-add button-icon mr-2"
+										></i>
 										{{
 											'WAREHOUSE_VIEW.CREATE_ORDER'
 												| translate
