--- a/admin/website-angular/src/app/@shared/render-component/name-redirect/name-redirect.component.scss
+++ b/admin/website-angular/src/app/@shared/render-component/name-redirect/name-redirect.component.scss
@@ -1,5 +1,5 @@
 .redirectBtn {
-	h6 {
+	p {
 		margin-bottom: 0;
 		text-align: center !important;
 	}
@@ -9,4 +9,6 @@
 .warehouse-name-smt {
 	text-align: left !important;
 	width: auto;
+	font-size: 0.9rem;
+	line-height: 1;
 }
