--- a/admin/website-angular/src/app/@shared/render-component/product-title/product-title.component.scss
+++ b/admin/website-angular/src/app/@shared/render-component/product-title/product-title.component.scss
@@ -1,4 +1,5 @@
-div h6 {
-	margin-bottom: 0;
-	text-align: center;
+div p {
+	margin-bottom: 0 !important;
+	text-align: center !important;
+	width: 100%;
 }
