--- a/admin/website-angular/src/app/pages/+warehouses/+warehouse/warehouse.component.html
+++ b/admin/website-angular/src/app/pages/+warehouses/+warehouse/warehouse.component.html
@@ -37,7 +37,10 @@
 							</div>
 						</nb-card-header>
 
-						<nb-card-body style="overflow: hidden;">
+						<nb-card-body
+							class="process-orders"
+							style="overflow: hidden;"
+						>
 							<div
 								ngbRadioGroup
 								[(ngModel)]="filterMode"
