--- a/admin/website-angular/src/app/pages/+warehouses/warehouses.component.html
+++ b/admin/website-angular/src/app/pages/+warehouses/warehouses.component.html
@@ -31,7 +31,7 @@
 			class="mr-2 d-inline-block"
 			routerLink="track"
 		>
-			<i class="ion-md-trash button-icon"></i>
+			<i class="ion-md-map button-icon"></i>
 			<small _ngcontent-c55="">Show on Map</small>
 		</button>
 	</nb-card-header>
