--- a/admin/website-angular/src/app/@shared/render-component/customer-products-table/product-order-products/product-order-products.component.html
+++ b/admin/website-angular/src/app/@shared/render-component/customer-products-table/product-order-products/product-order-products.component.html
@@ -1,5 +1,5 @@
 <div class="product">
-	<h6 class="text-center">
+	<p class="text-center">
 		<span (click)="redirect()" class="button-redirect productBtn">
 			<img
 				alt=""
@@ -7,5 +7,5 @@
 			/>
 			<span class="productTitle">{{ productTitle }}</span>
 		</span>
-	</h6>
+	</p>
 </div>
