--- a/admin/website-angular/src/app/@shared/render-component/name-redirect/name-redirect.component.html
+++ b/admin/website-angular/src/app/@shared/render-component/name-redirect/name-redirect.component.html
@@ -1,10 +1,10 @@
 <div (click)="redirect()" class="{{ redirectPage ? 'redirectBtn' : '' }}">
-	<h6 class="warehouse-name-smt">
+	<p class="warehouse-name-smt">
 		<strong
 			>{{ rowData.name
 			}}<span *ngIf="rowData.isBanned" class="badge badge-danger"
 				>ban</span
 			></strong
 		>
-	</h6>
+	</p>
 </div>
