fix(ever-admin): a lot of fixings EV-1240

--- a/admin/website-angular/src/app/@shared/forms/location/location-form.component.html
+++ b/admin/website-angular/src/app/@shared/forms/location/location-form.component.html
@@ -4,8 +4,10 @@
 			<label class="col-sm-2 control-label"> </label>
 
 			<div class="col-sm-9 input-group">
-				<div class="input-group-addon search-addon-wrapper">
-					<i class="fa fa-search"></i>
+				<div class="input-group-prepend p-0">
+					<span class="input-group-text" id="basic-addon1"
+						><i class="fa fa-search"></i
+					></span>
 				</div>
 				<input
 					#autocomplete
