--- a/admin/website-angular/src/app/@shared/forms/location/location-form.component.scss
+++ b/admin/website-angular/src/app/@shared/forms/location/location-form.component.scss
@@ -13,6 +13,13 @@
 	}
 }
 
+.input-group-prepend {
+	.input-group-text {
+		background-color: #f7f9fc !important;
+		border-color: #edf1f7 !important;
+	}
+}
+
 ul {
 	padding-left: 0 !important !important;
 }
