--- a/admin/website-angular/src/app/pages/+warehouses/+warehouse-track/warehouse-track.component.html
+++ b/admin/website-angular/src/app/pages/+warehouses/+warehouse-track/warehouse-track.component.html
@@ -53,7 +53,7 @@
 									let-item="item"
 									let-index="index"
 								>
-									<h6 class="card-title">
+									<p class="card-title">
 										<img
 											*ngIf="item.logo"
 											height="40"
@@ -62,7 +62,7 @@
 											[src]="item.logo"
 										/>
 										{{ item }}
-									</h6>
+									</p>
 								</ng-template>
 							</ng-select>
 							<ng-select
@@ -79,7 +79,7 @@
 									let-item="item"
 									let-index="index"
 								>
-									<h6 class="card-title">
+									<p class="card-title">
 										<img
 											*ngIf="item.logo"
 											height="40"
@@ -88,16 +88,16 @@
 											[src]="item.logo"
 										/>
 										{{ item }}
-									</h6>
+									</p>
 								</ng-template>
 							</ng-select>
 						</div>
 						<nb-card-footer>
 							<div class="details">
 								<div class="warehouse" *ngIf="selectedStore">
-									<h5>
+									<h6>
 										<b>{{ selectedStore.name }}</b>
-									</h5>
+									</h6>
 									<ul>
 										<li>
 											Phone:
@@ -117,9 +117,9 @@
 									</ul>
 								</div>
 								<div class="carrier" *ngIf="selectedCarrier">
-									<h5>
+									<h6>
 										<b>{{ selectedCarrier.fullName }}</b>
-									</h5>
+									</h6>
 									<ul>
 										<li>
 											Delivery Count:
