--- a/admin/website-angular/src/app/pages/+warehouses/warehouses.component.html
+++ b/admin/website-angular/src/app/pages/+warehouses/warehouses.component.html
@@ -8,7 +8,7 @@
 			class="mr-2 d-inline-block"
 			(click)="createWarehouseModel()"
 		>
-			<i class="ion-md-add button-icon"></i>
+			<i class="ion-md-add button-icon mr-1"></i>
 			<small _ngcontent-c55="">{{
 				'WAREHOUSES_VIEW.CREATE' | translate
 			}}</small>
@@ -20,7 +20,7 @@
 			[disabled]="!hasSelectedWarehouses"
 			(click)="deleteSelectedRows()"
 		>
-			<i class="ion-md-trash button-icon"></i>
+			<i class="ion-md-trash button-icon mr-1"></i>
 			<small _ngcontent-c55="">{{
 				'WAREHOUSES_VIEW.DELETE' | translate
 			}}</small>
@@ -31,7 +31,7 @@
 			class="mr-2 d-inline-block"
 			routerLink="track"
 		>
-			<i class="ion-md-map button-icon"></i>
+			<i class="ion-md-map button-icon mr-1"></i>
 			<small _ngcontent-c55="">Show on Map</small>
 		</button>
 	</nb-card-header>
