--- a/admin/website-angular/src/app/@theme/styles/themes.scss
+++ b/admin/website-angular/src/app/@theme/styles/themes.scss
@@ -4,7 +4,7 @@
 @import '~@nebular/theme/styles/themes';
 
 // which themes you what to enable (empty to enable all)
-$nb-enabled-themes: (default /*, cosmic, corporate, everlight, everdark*/);
+$nb-enabled-themes: (default, cosmic, corporate, everlight, everdark);
 
 $nb-themes: nb-register-theme(
 	(
