--- a/admin/website-angular/src/app/pages/+carriers/+carrier/carrier.component.html
+++ b/admin/website-angular/src/app/pages/+carriers/+carrier/carrier.component.html
@@ -31,7 +31,7 @@
 					class="btn-with-icon no-text-transform"
 					[routerLink]="['./edit']"
 				>
-					<i class="ion-md-create mr-2"></i>
+					<i class="ion-md-create mr-1"></i>
 					<span>{{
 						'CARRIERS_VIEW.CARRIER_PAGE.EDIT' | translate
 					}}</span>
@@ -79,7 +79,7 @@
 					*ngIf="selectedCarrier"
 					(change)="carrierSelect($event)"
 					[items]="carriers"
-					[(ngModel)]="selectedCarrier.id"
+					[ngModel]="selectedCarrier.id"
 					[clearable]="false"
 					placeholder="{{
 						'CARRIERS_VIEW.CARRIER_PAGE.SELECT_CARRIER' | translate
@@ -104,7 +104,7 @@
 						let-item="item"
 						let-index="index"
 					>
-						<h6 class="card-title">
+						<p class="card-title">
 							<img
 								*ngIf="item.logo"
 								height="40"
@@ -115,7 +115,7 @@
 							{{ item.firstName }}
 							{{ item.firstName && item.lastName }}
 							{{ item.firstName ? '' : '# ' + item.id }}
-						</h6>
+						</p>
 					</ng-template>
 				</ng-select>
 			</nb-card-body>
