--- a/admin/website-angular/src/app/pages/+customers/+customer/customer.component.html
+++ b/admin/website-angular/src/app/pages/+customers/+customer/customer.component.html
@@ -35,7 +35,7 @@
 						status="primary"
 						[routerLink]="['./edit']"
 					>
-						<i class="ion-md-create button-icon mr-2"></i>
+						<i class="ion-md-create button-icon mr-1"></i>
 						<small>{{
 							'CUSTOMERS_VIEW.CUSTOMER_VIEW.EDIT' | translate
 						}}</small>
@@ -83,7 +83,7 @@
 					*ngIf="selectedUser"
 					(change)="customerSelect($event)"
 					[items]="users"
-					[(ngModel)]="selectedUser.id"
+					[ngModel]="selectedUser.id"
 					[clearable]="false"
 					placeholder="Select customer"
 					bindLabel="id"
@@ -106,7 +106,7 @@
 						let-item="item"
 						let-index="index"
 					>
-						<h6 class="card-title">
+						<p class="card-title">
 							<img
 								*ngIf="item.image"
 								height="40"
@@ -117,7 +117,7 @@
 							{{ item.firstName }}
 							{{ item.firstName && item.lastName }}
 							{{ item.firstName ? '' : '# ' + item.id }}
-						</h6>
+						</p>
 					</ng-template>
 				</ng-select>
 			</nb-card-body>
