--- a/admin/website-angular/src/app/pages/+customers/+invites/+invites-requests/invites-requests.component.html
+++ b/admin/website-angular/src/app/pages/+customers/+invites/+invites-requests/invites-requests.component.html
@@ -7,7 +7,7 @@
 			[disabled]="!hasSelectedInvitesRequests"
 			(click)="deleteSelectedRows()"
 		>
-			<i class="ion-md-trash button-icon mr-2"></i>
+			<i class="ion-md-trash button-icon mr-1"></i>
 			<small>{{
 				'CUSTOMERS_VIEW.INVITES_VIEW.DELETE' | translate
 			}}</small>
@@ -19,7 +19,7 @@
 			[disabled]="!hasSelectedInvitesRequestsForInvite"
 			(click)="inviteSelectedRows()"
 		>
-			<i class="fa fa-envelope-open-o button-icon"></i>
+			<i class="fa fa-envelope-open-o button-icon mr-1"></i>
 			<small>{{
 				'CUSTOMERS_VIEW.INVITES_VIEW.INVITE' | translate
 			}}</small>
