fix(ever-admin): fixed buttons in "Setup Merchant" EV-1240

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/product-categories/product-categories.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/product-categories/product-categories.component.html
@@ -12,9 +12,8 @@
 				class="form-group offset-md-4 col-md-4 text-center"
 			>
 				<button
-					nbButton
-					outline
-					status="success"
+					type="button"
+					class="btn btn-outline-success"
 					(click)="showMutationForm = true"
 				>
 					{{
