--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/products/products.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/products/products.component.html
@@ -29,9 +29,8 @@
 			<div class="row actions">
 				<div class="form-group offset-md-2 col-md-4">
 					<button
-						nbButton
-						outline
-						status="success"
+						type="button"
+						class="btn btn-outline-success"
 						[disabled]="!storeId"
 						(click)="currentView = componentViews.productsTable"
 					>
@@ -44,9 +43,8 @@
 
 				<div class="form-group col-md-4">
 					<button
-						nbButton
-						outline
-						status="success"
+						type="button"
+						class="btn btn-outline-success"
 						[disabled]="!storeId"
 						(click)="currentView = componentViews.createProduct"
 					>
