style(ever-admin): enabled dark theme and fixed styles for it EV-1240

--- a/admin/website-angular/src/app/@shared/json-modal/json-modal.component.html
+++ b/admin/website-angular/src/app/@shared/json-modal/json-modal.component.html
@@ -1,9 +1,9 @@
 <nb-card-header class="header">
-	<div class="title">
+	<h6 class="title">
 		{{ title | translate }}
 		<span *ngIf="subTitle" class="product-title">"{{ subTitle }}"</span>
 		{{ 'Details' | translate }}
-	</div>
+	</h6>
 </nb-card-header>
 
 <nb-card-body class="body">
