--- a/admin/website-angular/src/app/pages/+simulation/simulation.component.scss
+++ b/admin/website-angular/src/app/pages/+simulation/simulation.component.scss
@@ -72,3 +72,7 @@ a {
 	border-bottom-left-radius: 0.375rem;
 	border-bottom-right-radius: 0.375rem;
 }
+
+.fix-btn-height {
+	height: 2.5rem !important;
+}
