--- a/admin/website-angular/src/app/pages/+warehouses/+warehouse/warehouse-info/warehouse-info.component.html
+++ b/admin/website-angular/src/app/pages/+warehouses/+warehouse/warehouse-info/warehouse-info.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-	<div class="title">{{ 'WAREHOUSES_VIEW.INFO.STORE_INFO' | translate }}</div>
+	<h4 class="title">{{ 'WAREHOUSES_VIEW.INFO.STORE_INFO' | translate }}</h4>
 	<button class="close" aria-label="Close" (click)="cancel()">
 		<span aria-hidden="true">&times;</span>
 	</button>
