--- a/admin/website-angular/src/app/pages/+dashboard/dashboard.component.scss
+++ b/admin/website-angular/src/app/pages/+dashboard/dashboard.component.scss
@@ -13,15 +13,15 @@ $shadow-green: #00977e;
 	}
 
 	.title {
-		font-family: font-main;
-		font-size: 1.125rem;
-		font-weight: 600;
+		font-family: font-main !important;
+		// font-size: 1.125rem !important;
+		font-weight: 600 !important;
 	}
 
 	.value {
-		font-size: 2.5rem;
-		font-weight: 300;
-		line-height: 1.3;
+		// font-size: 2.5rem !important;
+		font-weight: 300 !important;
+		line-height: 2rem !important;
 	}
 
 	.description {
