--- a/admin/website-angular/src/app/pages/+simulation/simulation.component.html
+++ b/admin/website-angular/src/app/pages/+simulation/simulation.component.html
@@ -50,6 +50,7 @@
 						nbButton
 						status="success"
 						id="order"
+						class="fix-btn-height"
 						(click)="orderCreate()"
 						[disabled]="!hasProductsForOrder"
 						[hidden]="order != null || user == null"
