fix(ever-admin): fixed ever dark theme EV-1240

--- a/admin/website-angular/src/app/pages/+dashboard/charts-panel/chart-panel-header/chart-panel-header.component.html
+++ b/admin/website-angular/src/app/pages/+dashboard/charts-panel/chart-panel-header/chart-panel-header.component.html
@@ -57,7 +57,7 @@
 			class="btn w-auto"
 			[ngClass]="{
 				'btn-outline-success': currentTheme === 'default',
-				'btn-primary': currentTheme !== 'default',
+				'btn-outline-primary': currentTheme !== 'default',
 				'btn-sm': breakpoint.width <= breakpoints.is
 			}"
 		>
