fix(ever-admin): more themes fixing EV-1240

--- a/admin/website-angular/src/app/@theme/styles/everlight.theme.scss
+++ b/admin/website-angular/src/app/@theme/styles/everlight.theme.scss
@@ -4,27 +4,64 @@ $success: #47d26f;
 $dark: hsl(234, 26, 25);
 $nb-themes: nb-register-theme(
 	(
-		color-success: #47d26f,
-		color-fg-highlight: #47d26f,
-		color-primary: #888,
-		color-danger: #ce4843,
-		color-info: #888,
-		layout-bg: rgb(235, 235, 235),
-		sidebar-bg: #1f212a,
-		menu-bg: transparent,
-		menu-item-separator: transparent,
+		color-success-100: #47d26f,
+		color-success-200: #47d26f,
+		color-success-300: #47d26f,
+		color-success-400: #47d26f,
+		color-success-500: #47d26f,
+		color-success-600: #47d26f,
+		color-success-700: #47d26f,
+		color-success-800: #47d26f,
+		color-success-900: #47d26f,
+		color-text-color-highlight-500: #47d26f,
+		color-primary-100: #888,
+		color-primary-200: #888,
+		color-primary-300: #888,
+		color-primary-400: #888,
+		color-primary-500: #888,
+		color-primary-600: #888,
+		color-primary-700: #888,
+		color-primary-800: #888,
+		color-primary-900: #888,
+		color-danger-100: #ce4843,
+		color-danger-200: #ce4843,
+		color-danger-300: #ce4843,
+		color-danger-400: #ce4843,
+		color-danger-500: #ce4843,
+		color-danger-600: #ce4843,
+		color-danger-700: #ce4843,
+		color-danger-800: #ce4843,
+		color-danger-900: #ce4843,
+		color-info-100: #888,
+		color-info-200: #888,
+		color-info-300: #888,
+		color-info-400: #888,
+		color-info-500: #888,
+		color-info-600: #888,
+		color-info-700: #888,
+		color-info-800: #888,
+		color-info-900: #888,
+		layout-background-color: rgb(235, 235, 235),
+		sidebar-background-color: #1f212a,
+		menu-background-color: transparent,
+		menu-item-divider-color: transparent,
 		drops-icon-line-gadient: -webkit-linear-gradient(white, gray),
-		menu-fg: #8b8b8b,
-		menu-submenu-bg: #2a2c39,
-		menu-submenu-fg: white,
-		menu-active-fg: white,
-		menu-active-bg: #2a2c39,
-		menu-icon-active-color: white,
-		menu-icon-color: #8b8b8b,
-		header-bg: #1f212a,
-		header-fg: #fff,
-		menu-submenu-active-bg: #2a2c39,
-		menu-submenu-active-fg: #8b8b8b
+		menu-text-color: #8b8b8b,
+		menu-submenu-background-color: #2a2c39,
+		menu-submenu-text-color: white,
+		menu-item-active-text-color: white,
+		menu-item-active-background-color: #2a2c39,
+		menu-item-icon-active-color: white,
+		menu-item-icon-color: #8b8b8b,
+		header-background-color: #1f212a,
+		header-text-color: #fff,
+		user-initials-text-color: red,
+		menu-submenu-item-active-background-color: #2a2c39,
+		menu-submenu-item-active-text-color: #8b8b8b,
+		user-name-text-color: white,
+		radio-text-color: white,
+		text-basic-color: #8b8b8b,
+		spinner-background-color: transparent
 	),
 	everlight,
 	default
