--- a/admin/website-angular/src/app/@theme/styles/everdark.theme.scss
+++ b/admin/website-angular/src/app/@theme/styles/everdark.theme.scss
@@ -4,6 +4,24 @@ $success: #47d26f;
 $dark: hsl(234, 26, 25);
 $nb-themes: nb-register-theme(
 	(
+		color-primary-100: $gray,
+		color-primary-200: $gray,
+		color-primary-300: $gray,
+		color-primary-400: $gray,
+		color-primary-500: $gray,
+		color-primary-600: $gray,
+		color-primary-700: $gray,
+		color-primary-800: $gray,
+		color-primary-900: $gray,
+		color-info-100: $gray,
+		color-info-200: $gray,
+		color-info-300: $gray,
+		color-info-400: $gray,
+		color-info-500: $gray,
+		color-info-600: $gray,
+		color-info-700: $gray,
+		color-info-800: $gray,
+		color-info-900: $gray,
 		// backgrounds
 			header-background-color: #1f212a,
 		layout-background-color: #2a2c39,
@@ -18,9 +36,8 @@ $nb-themes: nb-register-theme(
 		select-outline-background-color: #1f212a,
 		select-filled-background-color: #1f212a,
 		select-hero-background-color: #1f212a,
-		// color-bg: #1f212a,
-			// color-info: #888,
-			drops-icon-line-gadient: -webkit-linear-gradient(gray, black),
+		color-bg: #1f212a,
+		drops-icon-line-gadient: -webkit-linear-gradient(gray, black),
 		// cards
 			// TODO card-border-color: rgba(0, 0, 0, 0.125),
 			// card-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
@@ -77,7 +94,8 @@ $nb-themes: nb-register-theme(
 			// TODO 	color-fg-text: #8b8b8b,
 			// color-fg: #8b8b8b,
 			// color-fg-highlight: white,
-			card-header-text-color: #8b8b8b,
+			text-basic-color: #8b8b8b,
+		card-header-text-color: #8b8b8b,
 		footer-text-color: #8b8b8b,
 		link-color: white !important,
 		// separator
@@ -98,15 +116,16 @@ $nb-themes: nb-register-theme(
 		scrollbar-bg: #1f212a,
 		spinner-background-color: transparent,
 		spinner-circle-filled-color: $danger,
-		tabset-tab-underline-color: $gray,
-		select-primary-background-color: $gray,
+		// tabset-tab-underline-color: $gray,
+			select-primary-background-color: $gray,
 		// tabs-selected-second-color: $gray,
 			popover-background-color: #1f212a !important,
 		popover-border-color: white,
 		user-picture-box-border-color: $gray,
 		badge-success-background-color: $gray,
 		tooltip-success-background-color: $gray,
-		shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2)
+		shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
+		tabset-tab-text-color: white !important
 	),
 	everdark,
 	cosmic
