style(ever-admin): small fixing

--- a/admin/website-angular/src/app/@theme/styles/themes.scss
+++ b/admin/website-angular/src/app/@theme/styles/themes.scss
@@ -141,7 +141,8 @@ $nb-themes: nb-register-theme(
 		slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
 		slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
 		smart-table-bg-even: transparent,
-		smart-table-bg-active: rgba(0, 0, 0, 0.1)
+		smart-table-bg-active: rgba(0, 0, 0, 0.1),
+		text-basic-color: #8b8b8b
 	),
 	dark,
 	dark
